Add song author/band

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 </head>
 <body>
     <h3>Last Christmas</h3>
+    <h2>by Wham!</h2>
     <p>Oh, oh-oh, ooh-oh-oh-oh
         Ah-ah
         Last Christmas, I gave you my heart
